Validate Azure AD B2C token

--- a/GamePlatformServer/GamePlatformServer/appsettings.json
+++ b/GamePlatformServer/GamePlatformServer/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://arcb2c.b2clogin.com",
+    "Domain": "arcb2c.onmicrosoft.com",
+    "ClientId": "8a75ef0b-dc05-41eb-8c6f-fd21845c1252",
+    "SignUpSignInPolicyId": "B2C_1_signupsignin1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
